crates/vescpkg-rs/tests/ui/nonzero_tokens_do_not_implement_default.stderr
error[E0277]: the trait bound `BaudRate: Default` is not satisfied
 --> tests/ui/nonzero_tokens_do_not_implement_default.rs:6:24
  |
6 |     requires_default::<BaudRate>();
  |                        ^^^^^^^^ the trait `Default` is not implemented for `BaudRate`
  |
note: required by a bound in `requires_default`
 --> tests/ui/nonzero_tokens_do_not_implement_default.rs:3:24
  |
3 | fn requires_default<T: Default>() {}
  |                        ^^^^^^^ required by this bound in `requires_default`

error[E0277]: the trait bound `PacketLength: Default` is not satisfied
 --> tests/ui/nonzero_tokens_do_not_implement_default.rs:7:24
  |
7 |     requires_default::<PacketLength>();
  |                        ^^^^^^^^^^^^ the trait `Default` is not implemented for `PacketLength`
  |
note: required by a bound in `requires_default`
 --> tests/ui/nonzero_tokens_do_not_implement_default.rs:3:24
  |
3 | fn requires_default<T: Default>() {}
  |                        ^^^^^^^ required by this bound in `requires_default`
