crates/vescpkg-rs/tests/ui/nonzero_tokens_do_not_implement_default.rs
use vescpkg_rs::{BaudRate, PacketLength};

fn requires_default<T: Default>() {}

fn main() {
    requires_default::<BaudRate>();
    requires_default::<PacketLength>();
}
